--- a/src/index.css
+++ b/src/index.css
@@ -336,3 +336,9 @@ hr {
 .email-button {
   margin-bottom: 2px; 
 }
+.Partners{
+  height: 650px;
+  width: 1350px;
+  background-color: #242423;
+  border-bottom-right-radius: 350px;
+}
