--- a/src/index.css
+++ b/src/index.css
@@ -322,9 +322,10 @@ padding: 2px;
     }
     .breadcrumb-container{
       margin-left: 5px;
+      margin-right: 150px;
     }
     .FeastFriends{
-      font-size: 20px;
+      font-size: 25px;
     } 
 }
 
@@ -343,6 +344,7 @@ padding: 2px;
         }
         .breadcrumb-container{
           margin-left: 10px;
+        
         }
         .FeastFriends{
           font-size: 20px;
