--- a/src/index.css
+++ b/src/index.css
@@ -152,10 +152,6 @@ body {
   margin-bottom: 30px;
 }
 
-.imagemain {
-  width: 100%;
-  height: 100%;
-}
 
 .spacer {
   width: 10px;
@@ -202,7 +198,7 @@ body {
   bottom: 0px;
   left: 50%;
   transform: translateX(-50%);
-  color: white;
+  color: rgb(255, 255, 255);
   background-color: rgba(26, 26, 26, 0.432);
   padding: 40px;
   border-radius: 10px;
@@ -326,7 +322,11 @@ padding: 2px;
     }
     .FeastFriends{
       font-size: 25px;
-    } 
+    }
+    .image-container{
+      width: 500px;
+ 
+    }
 }
 
 @media (min-width: 640px) {
@@ -349,6 +349,9 @@ padding: 2px;
         .FeastFriends{
           font-size: 20px;
         }
+        .image-container{
+          width: 700px;
+        }
 }
 @media (min-width: 768px) {.logo,.credentials{
   margin-left: 200px;
@@ -367,6 +370,9 @@ float: left;
         }
         .FeastFriends{
           font-size: 20px;
+        }
+        .image-container{
+          width: 900px;
         }}
 
 @media (min-width: 1024px) {.logo,.credentials{
@@ -383,6 +389,9 @@ float: left;
         }
         .FeastFriends{
           font-size: 25px;
+        }
+        .image-container{
+          width: 1100px;
         }
 }
 
@@ -401,6 +410,9 @@ float: left;
         .FeastFriends{
           font-size: 30px;
         }
+        .image-container{
+          width: 1300px;
+        }
      }
   
 @media (min-width: 1536px) {.logo,.credentials{
@@ -417,4 +429,8 @@ height: 50px;}
     }
     .FeastFriends{
       font-size: 35px;
-    }}
+    }
+  .image-container{
+    width: 1300px;
+  }
+}
