--- a/src/index.css
+++ b/src/index.css
@@ -330,6 +330,9 @@ padding: 2px;
     .Partners{
       width: 500px;
     }
+    .data{
+      width: 550px;
+    }
 }
 
 @media (min-width: 640px) {
@@ -358,6 +361,9 @@ padding: 2px;
         .Partners{
           width: 850px;
         }
+        .data{
+          width: 850px;
+        }
 }
 @media (min-width: 768px) {.logo,.credentials{
   margin-left: 200px;
@@ -382,6 +388,9 @@ float: left;
         }
         .Partners{
           width: 950px;
+        }
+        .data{
+          width: 950px;
         }}
 
 @media (min-width: 1024px) {.logo,.credentials{
@@ -403,6 +412,9 @@ float: left;
           width: 1100px;
         }
         .Partners{
+          width: 1150px;
+        }
+        .data{
           width: 1150px;
         }
 }
@@ -428,6 +440,9 @@ float: left;
         .Partners{
           width: 1350px;
         }
+        .data{
+          width: 1350px;
+        }
      }
   
 @media (min-width: 1536px) {.logo,.credentials{
@@ -450,5 +465,8 @@ height: 50px;}
   }
   .Partners{
     width: 1350px;
+  }
+  .data{
+    width: 1750px;
   }
 }
