--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ body {
   background-color: black;
   color: rgb(248, 202, 102);
   font-size: 16px;
+  border-radius: 50px;
 }
 
 .custom-button {
@@ -309,6 +310,7 @@ body {
   color: aliceblue;
   margin-left: 500px;
 }
+
 @media (min-width: 440px)   {
   .logo,.credentials{
     margin-left: 100px;
