--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  height: 380px;
+  height: 300px;
   width: 380px;
   margin-left: 480px;
 }
@@ -53,6 +53,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin-left: 480px;
+  margin-top: 30px;
 }
 
 
