--- a/src/index.css
+++ b/src/index.css
@@ -313,7 +313,7 @@ body {
 .find{
   font-size:xx-large;
   font-family:"DM Serif Text", serif ;
-  color: aliceblue;
+  color: rgb(248, 202, 102);
   margin-left: 20px;
 }
 
